--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,13 @@
 body{
   background: white;
 }
+
+#map { 
+  position:relative; 
+  top:20px; 
+  width:700px; 
+  height:466px; 
+  margin:0px 
+  auto; 
+  background:#FFF 
+   }
