Adding pin positioning

--- a/css/app.css
+++ b/css/app.css
@@ -16,392 +16,6 @@ img.map {
   border-radius: 3px;
 }
 
-img.pin.albania {
-  top: 10px;
-  left: 300px;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-}
-img.pin.andorra {
-  top: 10px;
-  left: 300px;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-}
-img.pin.armenia {
-  top: 10px;
-  left: 300px;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-}
-img.pin.austria {
-  top: 10px;
-  left: 300px;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-}
-img.pin.azerbaijan {
-  top: 10px;
-  left: 300px;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-}
-img.pin.belarus {
-  top: 10px;
-  left: 300px;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-}
-img.pin.belgium {
-  top: 10px;
-  left: 300px;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-}
-img.pin.bosnia-and-herzegovina {
-  top: 10px;
-  left: 300px;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-}
-img.pin.bulgaria {
-  top: 10px;
-  left: 300px;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-}
-img.pin.croatia {
-  top: 10px;
-  left: 300px;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-}
-img.pin.cyprus {
-  top: 10px;
-  left: 300px;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-}
-img.pin.czech-republic {
-  top: 10px;
-  left: 300px;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-}
-img.pin.denmark {
-  top: 10px;
-  left: 300px;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-}
-img.pin.estonia {
-  top: 10px;
-  left: 300px;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-}
-img.pin.finland {
-  top: 10px;
-  left: 300px;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-}
-img.pin.france {
-  top: 10px;
-  left: 300px;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-}
-img.pin.georgia {
-  top: 10px;
-  left: 300px;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-}
-img.pin.germany {
-  top: 10px;
-  left: 300px;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-}
-img.pin.greece {
-  top: 10px;
-  left: 300px;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-}
-img.pin.hungary {
-  top: 10px;
-  left: 300px;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-}
-img.pin.iceland {
-  top: 10px;
-  left: 300px;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-}
-img.pin.ireland {
-  top: 10px;
-  left: 300px;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-}
-img.pin.italy {
-  top: 10px;
-  left: 300px;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-}
-img.pin.kosovo {
-  top: 10px;
-  left: 300px;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-}
-img.pin.latvia {
-  top: 10px;
-  left: 300px;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-}
-img.pin.liechtenstein {
-  top: 10px;
-  left: 300px;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-}
-img.pin.lithuania {
-  top: 10px;
-  left: 300px;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-}
-img.pin.luxembourg {
-  top: 10px;
-  left: 300px;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-}
-img.pin.macedonia {
-  top: 10px;
-  left: 300px;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-}
-img.pin.malta {
-  top: 10px;
-  left: 300px;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-}
-img.pin.moldova {
-  top: 10px;
-  left: 300px;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-}
-img.pin.monaco {
-  top: 10px;
-  left: 300px;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-}
-img.pin.montenegro {
-  top: 10px;
-  left: 300px;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-}
-img.pin.the-netherlands {
-  top: 10px;
-  left: 300px;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-}
-img.pin.norway {
-  top: 10px;
-  left: 300px;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-}
-img.pin.poland {
-  top: 10px;
-  left: 300px;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-}
-img.pin.portugal {
-  top: 10px;
-  left: 300px;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-}
-img.pin.romania {
-  top: 10px;
-  left: 300px;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-}
-img.pin.russia {
-  top: 10px;
-  left: 300px;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-}
-img.pin.san-marino {
-  top: 10px;
-  left: 300px;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-}
-img.pin.serbia {
-  top: 10px;
-  left: 300px;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-}
-img.pin.slovakia {
-  top: 10px;
-  left: 300px;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-}
-img.pin.slovenia {
-  top: 10px;
-  left: 300px;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-}
-img.pin.spain {
-  top: 10px;
-  left: 300px;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-}
-img.pin.sweden {
-  top: 10px;
-  left: 300px;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-}
-img.pin.switzerland {
-  top: 10px;
-  left: 300px;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-}
-img.pin.turkey {
-  top: 10px;
-  left: 300px;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-}
-img.pin.ukraine {
-  top: 10px;
-  left: 300px;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-}
-img.pin.united-kingdom {
-  top: 10px;
-  left: 300px;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-}
-img.pin.vatican-city {
-  top: 10px;
-  left: 300px;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-}
-img.pin.albania {
-  top: 10px;
-  left: 300px;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-}
-img.pin.albania {
-  top: 10px;
-  left: 300px;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-}
-img.pin.albania {
-  top: 10px;
-  left: 300px;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-}
-img.pin.albania {
-  top: 10px;
-  left: 300px;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-}
-img.pin.albania {
-  top: 10px;
-  left: 300px;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-}
-
 div.scores {
 }
 
@@ -448,5 +62,263 @@ input {
 
 input.hidden {
   display: none;
+}
+
+/* PINS */
+
+img.pin {
+  position: absolute; 
+  width: 20px;
+  height: 20px;
+}
+
+img.pin.albania {
+  top: 400px;
+  left: 313px;
+}
+
+img.pin.andorra {
+  top: 379px;
+  left: 123px;
+}
+
+img.pin.armenia {
+  top: 334px;
+  left: 560px;
+}
+img.pin.austria {
+  top: 319px;
+  left: 252px;
+  
+}
+img.pin.azerbaijan {
+  top: 326px;
+  left: 584px;
+  
+}
+img.pin.belarus {
+  top: 214px;
+  left: 358px;
+  
+}
+img.pin.belgium {
+  top: 10px;
+  left: 300px;
+  
+}
+img.pin.bosnia-and-herzegovina {
+  top: 10px;
+  left: 300px;
+  
+}
+img.pin.bulgaria {
+  top: 10px;
+  left: 300px;
+  
+}
+img.pin.croatia {
+  top: 10px;
+  left: 300px;
+  
+}
+img.pin.cyprus {
+  top: 10px;
+  left: 300px;
+  
+}
+img.pin.czech-republic {
+  top: 10px;
+  left: 300px;
+  
+}
+img.pin.denmark {
+  top: 10px;
+  left: 300px;
+  
+}
+img.pin.estonia {
+  top: 10px;
+  left: 300px;
+  
+}
+img.pin.finland {
+  top: 10px;
+  left: 300px;
+  
+}
+img.pin.france {
+  top: 10px;
+  left: 300px;
+  
+}
+img.pin.georgia {
+  top: 10px;
+  left: 300px;
+  
+}
+img.pin.germany {
+  top: 10px;
+  left: 300px;
+  
+}
+img.pin.greece {
+  top: 10px;
+  left: 300px;
+  
+}
+img.pin.hungary {
+  top: 10px;
+  left: 300px;
+  
+}
+img.pin.iceland {
+  top: 10px;
+  left: 300px;
+  
+}
+img.pin.ireland {
+  top: 10px;
+  left: 300px;
+  
+}
+img.pin.italy {
+  top: 10px;
+  left: 300px;
+  
+}
+img.pin.kosovo {
+  top: 10px;
+  left: 300px;
+  
+}
+img.pin.latvia {
+  top: 10px;
+  left: 300px;
+  
+}
+img.pin.liechtenstein {
+  top: 10px;
+  left: 300px;
+  
+}
+img.pin.lithuania {
+  top: 10px;
+  left: 300px;
+  
+}
+img.pin.luxembourg {
+  top: 10px;
+  left: 300px;
+  
+}
+img.pin.macedonia {
+  top: 10px;
+  left: 300px;
+  
+}
+img.pin.malta {
+  top: 10px;
+  left: 300px;
+  
+}
+img.pin.moldova {
+  top: 10px;
+  left: 300px;
+  
+}
+img.pin.monaco {
+  top: 10px;
+  left: 300px;
+  
+}
+img.pin.montenegro {
+  top: 10px;
+  left: 300px;
+  
+}
+img.pin.the-netherlands {
+  top: 10px;
+  left: 300px;
+  
+}
+img.pin.norway {
+  top: 10px;
+  left: 300px;
+  
+}
+img.pin.poland {
+  top: 10px;
+  left: 300px;
+  
+}
+img.pin.portugal {
+  top: 10px;
+  left: 300px;
+  
+}
+img.pin.romania {
+  top: 10px;
+  left: 300px;
+  
+}
+img.pin.russia {
+  top: 10px;
+  left: 300px;
+  
+}
+img.pin.san-marino {
+  top: 10px;
+  left: 300px;
+  
+}
+img.pin.serbia {
+  top: 10px;
+  left: 300px;
+  
+}
+img.pin.slovakia {
+  top: 10px;
+  left: 300px;
+  
+}
+img.pin.slovenia {
+  top: 10px;
+  left: 300px;
+  
+}
+img.pin.spain {
+  top: 10px;
+  left: 300px;
+  
+}
+img.pin.sweden {
+  top: 10px;
+  left: 300px;
+  
+}
+img.pin.switzerland {
+  top: 10px;
+  left: 300px;
+  
+}
+img.pin.turkey {
+  top: 10px;
+  left: 300px;
+  
+}
+img.pin.ukraine {
+  top: 10px;
+  left: 300px;
+  
+}
+img.pin.united-kingdom {
+  top: 10px;
+  left: 300px;
+  
+}
+img.pin.vatican-city {
+  top: 10px;
+  left: 300px;
+  
 }
 
