Adding class of hidden to pins

--- a/css/app.css
+++ b/css/app.css
@@ -102,223 +102,224 @@ img.pin.belarus {
   
 }
 img.pin.belgium {
-  top: 10px;
-  left: 300px;
+  top: 273px;
+  left: 157px;
   
 }
 img.pin.bosnia-and-herzegovina {
-  top: 10px;
-  left: 300px;
+  top: 358px;
+  left: 285px;
   
 }
 img.pin.bulgaria {
-  top: 10px;
-  left: 300px;
+  top: 372px;
+  left: 364px;
   
 }
 img.pin.croatia {
-  top: 10px;
-  left: 300px;
+  top: 351px;
+  left: 258px;
   
 }
 img.pin.cyprus {
-  top: 10px;
-  left: 300px;
+  top: 446px;
+  left: 469px;
   
 }
 img.pin.czech-republic {
-  top: 10px;
-  left: 300px;
+  top: 292px;
+  left: 256px;
   
 }
 img.pin.denmark {
-  top: 10px;
-  left: 300px;
+  top: 203px;
+  left: 205px;
   
 }
 img.pin.estonia {
-  top: 10px;
-  left: 300px;
+  top: 158px;
+  left: 321px;
   
 }
 img.pin.finland {
-  top: 10px;
-  left: 300px;
+  top: 66px;
+  left: 306px;
   
 }
 img.pin.france {
-  top: 10px;
-  left: 300px;
+  top: 325px;
+  left: 141px;
   
 }
 img.pin.georgia {
-  top: 10px;
-  left: 300px;
+  top: 318px;
+  left: 547px;
   
 }
 img.pin.germany {
-  top: 10px;
-  left: 300px;
+  top: 266px;
+  left: 207px;
   
 }
 img.pin.greece {
-  top: 10px;
-  left: 300px;
+  top: 421px;
+  left: 334px;
   
 }
 img.pin.hungary {
-  top: 10px;
+  top: 324px;
   left: 300px;
   
 }
 img.pin.iceland {
-  top: 10px;
-  left: 300px;
+  top: 55px;
+  left: 47px;
   
 }
 img.pin.ireland {
-  top: 10px;
-  left: 300px;
+  top: 226px;
+  left: 63px;
   
 }
 img.pin.italy {
-  top: 10px;
-  left: 300px;
+  top: 367px;
+  left: 218px;
   
 }
 img.pin.kosovo {
-  top: 10px;
-  left: 300px;
+  top: 377px;
+  left: 319px;
   
 }
 img.pin.latvia {
-  top: 10px;
-  left: 300px;
+  top: 184px;
+  left: 325px;
   
 }
 img.pin.liechtenstein {
-  top: 10px;
-  left: 300px;
+  top: 322px;
+  left: 206px;
   
 }
 img.pin.lithuania {
-  top: 10px;
-  left: 300px;
+  top: 206px;
+  left: 319px;
   
 }
 img.pin.luxembourg {
-  top: 10px;
-  left: 300px;
+  top: 287px;
+  left: 173px;
   
 }
 img.pin.macedonia {
-  top: 10px;
-  left: 300px;
+  top: 392px;
+  left: 328px;
   
 }
 img.pin.malta {
-  top: 10px;
-  left: 300px;
+  top: 470px;
+  left: 258px;
   
 }
 img.pin.moldova {
-  top: 10px;
-  left: 300px;
+  top: 306px;
+  left: 382px;
   
 }
 img.pin.monaco {
-  top: 10px;
-  left: 300px;
+  top: 368px;
+  left: 184px;
   
 }
 img.pin.montenegro {
-  top: 10px;
-  left: 300px;
+  top: 379px;
+  left: 302px;
   
 }
 img.pin.the-netherlands {
-  top: 10px;
-  left: 300px;
+  top: 251px;
+  left: 177px;
   
 }
 img.pin.norway {
-  top: 10px;
-  left: 300px;
+  top: 119px;
+  left: 202px;
   
 }
 img.pin.poland {
-  top: 10px;
-  left: 300px;
+  top: 257px;
+  left: 287px;
   
 }
 img.pin.portugal {
-  top: 10px;
-  left: 300px;
+  top: 418px;
+  left: 14px;
   
 }
 img.pin.romania {
-  top: 10px;
-  left: 300px;
+  top: 339px;
+  left: 365px;
   
 }
 img.pin.russia {
-  top: 10px;
-  left: 300px;
+  top: 135px;
+  left: 476px;
+  }
   
 }
 img.pin.san-marino {
-  top: 10px;
-  left: 300px;
+  top: 364px;
+  left: 232px;
   
 }
 img.pin.serbia {
-  top: 10px;
-  left: 300px;
+  top: 361px;
+  left: 317px;
   
 }
 img.pin.slovakia {
-  top: 10px;
+  top: 296px;
   left: 300px;
   
 }
 img.pin.slovenia {
-  top: 10px;
-  left: 300px;
+  top: 336px;
+  left: 251px;
   
 }
 img.pin.spain {
-  top: 10px;
-  left: 300px;
+  top: 408px;
+  left: 64px;
   
 }
 img.pin.sweden {
-  top: 10px;
-  left: 300px;
+  top: 111px;
+  left: 244px;
   
 }
 img.pin.switzerland {
-  top: 10px;
-  left: 300px;
+  top: 325px;
+  left: 188px;
   
 }
 img.pin.turkey {
-  top: 10px;
-  left: 300px;
+  top: 398px;
+  left: 488px;
   
 }
 img.pin.ukraine {
-  top: 10px;
-  left: 300px;
+  top: 268px;
+  left: 398px;
   
 }
 img.pin.united-kingdom {
-  top: 10px;
-  left: 300px;
+  top: 243px;
+  left: 111px;
   
 }
 img.pin.vatican-city {
-  top: 10px;
-  left: 300px;
+  top: 399px;
+  left: 238px;
   
 }
 
