--- a/css/app.css
+++ b/css/app.css
@@ -1,7 +1,18 @@
 body {
   text-align: center;
-  background: white;
+  background: #B4D5F4;
+  font-family: 'Lato', sans-serif;
 
+}
+
+h1 {
+  font-size: 35px;
+  font-weight: 700;
+}
+
+h3 {
+  margin-top: -10px;
+  font-weight: 300;
 }
 
 .container {
@@ -15,6 +26,7 @@ img.map {
   width: 600px;
   height: 500px;
   border-radius: 3px;
+
 }
 
 div.scores {
@@ -24,6 +36,7 @@ div#screen {
   position: absolute;
   top: 0;
   right: 105px;
+  font-size: 25px
 }
 
 .score1, .score2 {
@@ -31,30 +44,23 @@ div#screen {
   color: #fff;
   padding: 10px;
   width: 75px;
-
-}
-
-.score1 {
- background: #338A2E;
-}
-
-.score2 {
-  background: #236863;
+  background: #90caf9
 }
 
 #new-country-form {
   clear: both;
 }
-
-form {
-  padding: 15px;
+/*button {
+    left: 50%;
+    margin: -40px;
+    position: absolute;
+    top: 50%;
+}*/
+button:hover,
+button:active {
+    outline: 0;
 }
 
-input {
-  border: 0;
-  font-size: 30px;
-  outline: none;
-}
 
 .map-content {
   position: relative;
@@ -64,6 +70,45 @@ input {
 .hidden {
   display: none !important;
 }
+
+
+.welcome-screen {
+  background: #C2C6C9;
+  color: #fff;
+  padding: 20px;
+  border-radius: 3px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%,-50%);
+
+  margin-top: -100px;
+  margin-left: -55px;
+}
+
+.welcome-screen button {
+  background: #2D882D;
+  color: #fff;
+  border: 0;
+  padding: 15px 40px;
+  font-size: 20px;
+  border-radius: 8px;
+  border: 3px solid #000;
+}
+
+.welcome-screen button:hover {
+  background: #648A64;;
+}
+
+#new-country-input {
+  margin: 20px;
+  margin-right: 90px;
+  border: 0;
+  background: none;
+  font-size: 30px;
+  outline: none;
+}
+
 
 /* PINS */
 
@@ -321,4 +366,23 @@ img.pin.vatican-city {
   left: 238px;
   
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
